<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.example.photo_gallery.Views.FramedImageView
        android:id="@+id/fiv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:exampleColor="#33b5e5"
        app:exampleDimension="24sp"
        tools:ignore="MissingConstraints" />
<!--    <ImageView-->
<!--        android:id="@+id/ivGallery"-->
<!--        android:layout_marginStart="32dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="32dp"-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:visibility="visible"-->
<!--        app:exampleColor="#33b5e5"-->
<!--        app:exampleDimension="24sp"-->
<!--        tools:srcCompat="@tools:sample/avatars"-->
<!--        tools:ignore="MissingConstraints"/>-->

    <EditText
        android:id="@+id/etCaption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:focusable="auto"
        android:hint="caption"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiv" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCaption" />

    <Button
        android:id="@+id/btnSnap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="takePhoto"
        android:text="snap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="scrollPhotos"
        android:text="prev"
        app:layout_constraintBottom_toTopOf="@+id/btnUpload"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="scrollPhotos"
        android:text="next"
        app:layout_constraintBottom_toTopOf="@+id/btnSnap"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="goSearch"
        android:text="search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSnap"
        app:layout_constraintStart_toEndOf="@+id/btnUpload" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="uploadPhoto"
        android:text="upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="editSettings"
        android:text="Settings"
        app:layout_constraintBottom_toTopOf="@+id/btnSearch"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintStart_toEndOf="@+id/btnPrev" />

    <Button
        android:id="@+id/btnSpeak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="speakPressed"
        android:text="Speak"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />

</androidx.constraintlayout.widget.ConstraintLayout>